Update JSON parser to turn data into an array of Venues.

--- a/DeciderApp/Base.lproj/Main.storyboard
+++ b/DeciderApp/Base.lproj/Main.storyboard
@@ -209,6 +209,7 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="zFB-zH-5u0" secondAttribute="trailing" constant="8" id="16h-L0-7ks"/>
                                         <constraint firstItem="cG9-cb-rtH" firstAttribute="top" secondItem="zFB-zH-5u0" secondAttribute="bottom" constant="8" id="1fX-gr-CpI"/>
                                         <constraint firstAttribute="topMargin" secondItem="hrx-AI-7Sp" secondAttribute="top" id="6ws-RK-m67"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="cG9-cb-rtH" secondAttribute="bottom" constant="1" id="Ale-be-sWp"/>
                                         <constraint firstAttribute="leadingMargin" secondItem="hrx-AI-7Sp" secondAttribute="leading" id="S9A-7e-Xko"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="cG9-cb-rtH" secondAttribute="trailing" id="YWy-oS-rT3"/>
                                         <constraint firstItem="zFB-zH-5u0" firstAttribute="top" secondItem="nco-RM-48y" secondAttribute="topMargin" id="mZH-Td-x4g"/>
